--- a/ITTHELPER/Server/Templates/base.html
+++ b/ITTHELPER/Server/Templates/base.html
@@ -1,3 +1,4 @@
+{% load static %}
 <!DOCTYPE html>
 <html lang="en">
   <head>
@@ -31,7 +32,7 @@
     />
 
     <!-- Customized Bootstrap Stylesheet -->
-    <link href="css/style.css" rel="stylesheet" />
+    <link href="../static/css/style.css" rel="stylesheet" />
   </head>
 
   <body>
