--- a/ITTHELPER/Server/Templates/events.html
+++ b/ITTHELPER/Server/Templates/events.html
@@ -1,4 +1,5 @@
-{% include 'base.html%}
+{% load static %}
+{% include 'base.html %}
 	<header class="container-fluid header-bg text-white text-center py-5">
         <h1 class="display-4">Events & Workshops</h1>
     </header>
