--- a/ITTHELPER/Server/Templates/events.html
+++ b/ITTHELPER/Server/Templates/events.html
@@ -1,5 +1,5 @@
 {% load static %}
-{% include 'base.html %}
+{% include 'base.html' %}
 	<header class="container-fluid header-bg text-white text-center py-5">
         <h1 class="display-4">Events & Workshops</h1>
     </header>
