--- a/ITTHELPER/Server/Templates/addcourses.html
+++ b/ITTHELPER/Server/Templates/addcourses.html
@@ -1,7 +1,7 @@
-{% extends 'base.html' %}
+{% include 'base.html' %}
 {% load static %}
 
 <form action="">
     {% csrf_token %}
-    {{form.as_p}}
+    {{form}}
 </form>
