--- a/ITTHELPER/Server/Templates/employment.html
+++ b/ITTHELPER/Server/Templates/employment.html
@@ -1,2 +1,10 @@
-{% load static %}
 {% extends 'base.html' %}
+{% load static %}
+
+{% block title %}
+Employment Market
+{% endblock %}
+
+{% block body %}
+ <h1>smth goes here</h1>
+{% endblock %}
