--- a/ITTHELPER/Server/Templates/addtraining.html
+++ b/ITTHELPER/Server/Templates/addtraining.html
@@ -1,7 +1,10 @@
-{% include 'base.html' %}
+{% extends 'base.html' %}
 {% load static %}
 
-<form action="">
-    {% csrf_token %}
-    {{form.as_p}}
-</form>
+ {% block body %}
+ <form action="">
+     {% csrf_token %}
+     {{form.as_p}}
+     <button>Add</button>
+    </form>
+ {% endblock %}
