--- a/ITTHELPER/Server/Templates/training.html
+++ b/ITTHELPER/Server/Templates/training.html
@@ -1,44 +1,11 @@
-{% load static %} {% include 'base.html' %}
+{% extends 'base.html' %}
+{% load static %} 
 
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="utf-8" />
-    <title>ITT Helper</title>
-    <meta content="width=device-width, initial-scale=1.0" name="viewport" />
-    <meta content="Free HTML Templates" name="keywords" />
-    <meta content="Free HTML Templates" name="description" />
-
-    <!-- Favicon -->
-    <link href="img/favicon.ico" rel="icon" />
-
-    <!-- Google Web Fonts -->
-    <link rel="preconnect" href="https://fonts.gstatic.com" />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&display=swap"
-      rel="stylesheet"
-    />
-
-    <!-- Font Awesome -->
-    <link
-      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.10.0/css/all.min.css"
-      rel="stylesheet"
-    />
-
-    <!-- Libraries Stylesheet -->
-    <link href="lib/owlcarousel/assets/owl.carousel.min.css" rel="stylesheet" />
-    <link
-      href="lib/tempusdominus/css/tempusdominus-bootstrap-4.min.css"
-      rel="stylesheet"
-    />
-
-    <!-- Customized Bootstrap Stylesheet -->
-    <link href="..//static/css/style.css" rel="stylesheet" />
-  </head>
+{% block body %}
 
   <body>
     <!-- Include your top bar and navbar code here (copy from the existing code) -->
-
+    
     <!-- Training Section Start -->
     <section class="container-fluid py-5">
       <div class="container">
@@ -55,9 +22,9 @@
           <div class="col-lg-4 mb-4">
             <div class="card">
               <img
-                src="{% static '../static/images/blog-2.jpg'%}"
-                class="card-img-top"
-                alt="Training Program 1"
+              src="{% static '../static/images/blog-2.jpg'%}"
+              class="card-img-top"
+              alt="Training Program 1"
               />
               <div class="card-body">
                 <h5 class="card-title">Web Development Bootcamp</h5>
@@ -72,9 +39,9 @@
           <div class="col-lg-4 mb-4">
             <div class="card">
               <img
-                src="{% static '../static/images/blog-2.jpg'%}"
-                class="card-img-top"
-                alt="Training Program 2"
+              src="{% static '../static/images/blog-2.jpg'%}"
+              class="card-img-top"
+              alt="Training Program 2"
               />
               <div class="card-body">
                 <h5 class="card-title">Data Science Workshop</h5>
@@ -89,9 +56,9 @@
           <div class="col-lg-4 mb-4">
             <div class="card">
               <img
-                src="{% static '../static/images/blog-2.jpg'%}"
-                class="card-img-top"
-                alt="Training Program 3"
+              src="{% static '../static/images/blog-2.jpg'%}"
+              class="card-img-top"
+              alt="Training Program 3"
               />
               <div class="card-body">
                 <h5 class="card-title">Cybersecurity Training</h5>
@@ -107,28 +74,30 @@
       </div>
     </section>
     <!-- Training Section End -->
-
+    
     <!-- Include your footer code here (copy from the existing code) -->
-
+    
     <!-- Back to Top -->
     <a href="#" class="btn btn-lg btn-primary btn-lg-square back-to-top"
-      ><i class="fa fa-angle-double-up"></i
-    ></a>
-
-    <!-- JavaScript Libraries -->
-    <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.bundle.min.js"></script>
-    <script src="lib/easing/easing.min.js"></script>
-    <script src="lib/owlcarousel/owl.carousel.min.js"></script>
-    <script src="lib/tempusdominus/js/moment.min.js"></script>
-    <script src="lib/tempusdominus/js/moment-timezone.min.js"></script>
-    <script src="lib/tempusdominus/js/tempusdominus-bootstrap-4.min.js"></script>
-
-    <!-- Contact Javascript File -->
-    <script src="mail/jqBootstrapValidation.min.js"></script>
-    <script src="mail/contact.js"></script>
-
-    <!-- Template Javascript -->
-    <script src="js/main.js"></script>
-  </body>
-</html>
+    ><i class="fa fa-angle-double-up"></i
+      ></a>
+      
+      <!-- JavaScript Libraries -->
+      <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
+      <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.bundle.min.js"></script>
+      <script src="lib/easing/easing.min.js"></script>
+      <script src="lib/owlcarousel/owl.carousel.min.js"></script>
+      <script src="lib/tempusdominus/js/moment.min.js"></script>
+      <script src="lib/tempusdominus/js/moment-timezone.min.js"></script>
+      <script src="lib/tempusdominus/js/tempusdominus-bootstrap-4.min.js"></script>
+      
+      <!-- Contact Javascript File -->
+      <script src="mail/jqBootstrapValidation.min.js"></script>
+      <script src="mail/contact.js"></script>
+      
+      <!-- Template Javascript -->
+      <script src="js/main.js"></script>
+    </body>
+    </html>
+    
+{% endblock %}
