--- a/ITTHELPER/Server/Templates/footer.html
+++ b/ITTHELPER/Server/Templates/footer.html
@@ -21,7 +21,7 @@
                     <div class="d-flex flex-column justify-content-start">
                         <a class="text-white-50 mb-2" href="{% url 'courses' %}"><i class="fa fa-angle-right mr-2"></i>Courses</a>                   
                         <a class="text-white-50 mb-2" href="{% url 'training' %}"><i class="fa fa-angle-right mr-2"></i>Training</a>
-                        <a class="text-white-50 mb-2" href="{% url 'careerpath' %}" ><i class="fa fa-angle-right mr-2"></i>Career Path</a>
+                        <a class="text-white-50 mb-2" href="{% url 'path' %}" ><i class="fa fa-angle-right mr-2"></i>Career Path</a>
 					    <a class="text-white-50 mb-2" href="{% url 'employment' %}" ><i class="fa fa-angle-right mr-2"></i>Employment Market</a>
                     
                     </div>
