--- a/ITTHELPER/Server/Templates/path.html
+++ b/ITTHELPER/Server/Templates/path.html
@@ -1,7 +1,10 @@
 {% extends 'base.html' %}
 {% load static %}
 
+{% block title %}
+Paths
+{% endblock %}
 
- {% block body %}
+{% block body %}
  
- {% endblock %}
+{% endblock %}
