--- a/ITTHELPER/Server/Templates/navbar.html
+++ b/ITTHELPER/Server/Templates/navbar.html
@@ -55,7 +55,7 @@
                             <a href="{% url 'home' %}" class="nav-item nav-link">Home</a>
                             <a href="{% url 'courses' %}" class="nav-item nav-link">Courses</a>
                             <a href="{% url 'training' %}" class="nav-item nav-link">Training</a>
-                            <a href="{% url 'careerpath' %}" class="nav-item nav-link">Career Path</a>
+                            <a href="{% url 'path' %}" class="nav-item nav-link">Career Path</a>
                             <a href="{% url 'employment' %}" class="nav-item nav-link">Employment Market</a>
                             <a href="{% url 'events' %}" class="nav-item nav-link">Events & Workshops</a>
                             <a href="{% url 'cv' %}" class="nav-item nav-link">CVs Tips</a>
