i dont remember what i did from last time xD

--- a/ITTHELPER/Server/Templates/addcourses.html
+++ b/ITTHELPER/Server/Templates/addcourses.html
@@ -1,4 +1,4 @@
-{% include 'base.html' %}
+<!-- {% include 'base.html' %} -->
 {% load static %}
 
 <form action="/courses/create" method="post" hx-post="/courses/create" hx-target="#content">
