--- a/ITTHELPER/Server/Templates/training.html
+++ b/ITTHELPER/Server/Templates/training.html
@@ -3,7 +3,6 @@
 
 {% block body %}
 
-  <body>
     <!-- Include your top bar and navbar code here (copy from the existing code) -->
     
     <!-- Training Section Start -->
@@ -77,27 +76,8 @@
     
     <!-- Include your footer code here (copy from the existing code) -->
     
-    <!-- Back to Top -->
+    <!-- Back to Top
     <a href="#" class="btn btn-lg btn-primary btn-lg-square back-to-top"
     ><i class="fa fa-angle-double-up"></i
-      ></a>
-      
-      <!-- JavaScript Libraries -->
-      <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
-      <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.bundle.min.js"></script>
-      <script src="lib/easing/easing.min.js"></script>
-      <script src="lib/owlcarousel/owl.carousel.min.js"></script>
-      <script src="lib/tempusdominus/js/moment.min.js"></script>
-      <script src="lib/tempusdominus/js/moment-timezone.min.js"></script>
-      <script src="lib/tempusdominus/js/tempusdominus-bootstrap-4.min.js"></script>
-      
-      <!-- Contact Javascript File -->
-      <script src="mail/jqBootstrapValidation.min.js"></script>
-      <script src="mail/contact.js"></script>
-      
-      <!-- Template Javascript -->
-      <script src="js/main.js"></script>
-    </body>
-    </html>
-    
+      ></a>  -->
 {% endblock %}
