--- a/ITTHELPER/accounts/Templates/login.html
+++ b/ITTHELPER/accounts/Templates/login.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Login</title>
 </head>
 <body>
     <form action="" method="post">
@@ -14,6 +14,6 @@
         <!-- <input type="text"name ="date_of_brith" placeholder="date of birth"> -->
         
         <input type="password" name="password" id="first name" placeholder="password" >
-        <button type="submit">Signup</button>
+        <button type="submit">Login</button>
 </body>
 </html>
