--- a/ITTHELPER/accounts/Templates/signup.html
+++ b/ITTHELPER/accounts/Templates/signup.html
@@ -61,16 +61,27 @@
 									<div class="form-group">
 										<input name="username" type="text" placeholder="Username">
 										</div>
+										</div>
 										<div class="col-lg-6 col-md-6 col-12">
 											<div class="form-group">
 												<input name="phone" type="text" placeholder="Phone">
 												</div>
 												</div>
-												<div class="col-lg-6 col-md-6 col-12">
+									<div class="col-lg-6 col-md-6 col-12">
 									<div class="form-group">
-										<input name="password" type="password" placeholder="Password">
+										<input name="password1" type="password" placeholder="Password">
 										</div>
-										</div>
+									</div>
+									<div class="col-lg-6 col-md-6 col-12">
+									<div class="form-group">
+										<input name="password2" type="password" placeholder="Confirm Password">
+									</div>
+									</div>
+									<!-- <div class="col-lg-6 col-md-6 col-12">
+									<div class="form-group">
+										<input name="position" type="text" placeholder="Position">
+									</div>
+								</div> -->
 										<!-- <div class="col-lg-6 col-md-6 col-12">
 											<div class="form-group">
 												<input name="confirm_password" type="password" placeholder="Confirm Password">
@@ -101,6 +112,8 @@
     </div>
 	<p>Already have an account?<a href ="{% url 'login' %}" style="color: #000000">  <u>Login</u></p>
 </div>
+</section>
+
 
 						</form>
                 </form>
