--- a/ITTHELPER/Server/Templates/contact-us.html
+++ b/ITTHELPER/Server/Templates/contact-us.html
@@ -30,7 +30,7 @@
 						<div class="col-lg-6">
 							<div class="contact-us-left">
 								<!--Start Google-map -->
-								<div id="myMap"></div>
+								<img src="{% static 'img/333.png' %}" alt="" style="width: 100%; height: 100%">
 								<!--/End Google-map -->
 							</div>
 						</div>
