--- a/ITTHELPER/Server/Templates/navbar.html
+++ b/ITTHELPER/Server/Templates/navbar.html
@@ -1,6 +1,4 @@
 {% load static %}
-
-		
 		<!-- Get Pro Button -->
 		<ul class="pro-features">
 			<a class="get-pro">Get Pro</a>
@@ -16,11 +14,11 @@
 <!-- Header Area -->
 		<header class="header" >
 			<!-- Header Inner -->
-			<div class="header-inner">
+			<div class="header-inner" style="padding-left: -150px;">
 				<div class="container">
 					<div class="inner">
-						<div class="row">
-							<div class="col-lg-3 col-md-3 col-12">
+						<div class="row" style="margin-right: -480px;">
+							<div class="col-lg-3 col-md-3 col-12" style="max-width: 7.5%;">
 								<!-- Start logo2 -->
 								<div class="logo2">
 									<a href="{% url 'home' %}"><img src="{% static 'img/logo2.png' %}" alt="logo"></a>
@@ -30,18 +28,18 @@
 								<div class="mobile-nav"></div>
 								<!-- End Mobile Nav -->
 							</div>
-							<div class="col-lg-7 col-md-9 col-12">
+							<div class="col-lg-7 col-md-9 col-12" style="align-items: center; padding-top: 15px; font-size:20px">
 								<!-- Main Menu -->
 								<div class="main-menu">
 									<nav class="navigation">
 										<ul class="nav menu">
-											<li><a href="{% url 'home' %}">Home </a></li>
-											<li><a href="{% url 'courses' %}">Courses </a></li>
-											<li><a href="{% url 'training' %}">Training </a></li>
-											<li><a href="{% url 'path' %}">Career Path </a></li>
-											<li><a href="{% url 'events' %}">Events & Workshops </a></li>
-											<li><a href="{% url 'cv' %}">CV Tips </a></li>
-											<li><a href="{% url 'guides' %}">Guides for Interviews </a></li>
+											<li><a href="{% url 'home' %}">Home</a></li>
+											<li><a href="{% url 'courses' %}">Courses</a></li>
+											<li><a href="{% url 'training' %}">Training</a></li>
+											<li><a href="{% url 'path' %}">Career Path</a></li>
+											<li><a href="{% url 'events' %}">Events</a></li>
+											<li><a href="{% url 'cv' %}">CV</a></li>
+											<li><a href="{% url 'guides' %}">Guides</a></li>
 											<li><a href="{% url 'contact_us'%}">Contact Us</a></li>
 											<li><a href="{% url 'feedback' %}">Feedback </a></li>
 										</ul>
@@ -49,7 +47,7 @@
 								</div>
 								<!--/ End Main Menu -->
 							</div>
-							<div class="col-lg-2 col-12">
+							<div class="col-lg-2 col-12" style="align-items: center; padding-top: 12px; ">
 								<div class="get-quote">
 									<a href="{% url 'signup' %}" class="btn">Get Started</a>
 								</div>
@@ -60,4 +58,4 @@
 			</div>
 			<!--/ End Header Inner -->
 		</header>
-		<!-- End Header Area -->
+		
