--- a/ITTHELPER/Server/Templates/path.html
+++ b/ITTHELPER/Server/Templates/path.html
@@ -4,74 +4,78 @@
 {% block body%}		
 		<!-- Pricing Table -->
 		<!-- Start Blog Area -->
-		<section class="blog section" id="blog" style="background: #f9f9f9;">
-			<div class="container">
-				<div class="row">
-					<div class="col-lg-12">
-						<div class="section-title">
-							<h2>Providing a range of courses</h2>
-							<img src="{% static 'img/logo2.png' %}" alt="#">
-							<p>The best suggestions of courses saves you effort and time.</p>
+		 <section class="slider">
+				<!-- Start Single Slider -->
+				<div class="single-slider" style="background-image:url('{% static 'img/slider2.png' %}')">
+					<div class="container">
+						<div class="row">
+							<div class="col-lg-7">
+								<div class="text">
+									<h1>We Provide The Best <span>Career Paths In Cyber-Security Tracks</span></h1>
+									<div class="button">
+										<a href="{% url 'contact_us' %}" class="btn primary">Contact Us</a>
+									</div>
+								</div>
+							</div>
 						</div>
 					</div>
 				</div>
-				<div class="row">
-					<div class="col-lg-4 col-md-6 col-12">
-						<!-- Single Blog -->
-						<div class="single-news">
-							<div class="news-head">
-								<img src="{% static 'img/d1.png' %}" alt="#">
-							</div>
-							<div class="news-body">
-								<div class="news-content">
-								<style>
-								.date a{
-								text-decoration: none; /* إزالة تأثير الرابط */
-								}
-								.date a:hover {
-								background:#0C4257;
-								color:#13BFBF;
-								}
-								</style>
-									<div class="date"><a href="#">Start Course</a></div>
-									<h2>Course Name</a></h2>
-									<p class="text">Course Details</p>
+				<!-- End Single Slider -->
+				<!-- Start Single Slider -->
+				<!-- Start End Slider -->
+				<!-- Start Single Slider -->
+				
+				<!-- End Single Slider -->
+		</section>
+		<section class="schedule">
+			<div class="container">
+				<div class="schedule-inner">
+					<div class="row">
+						<div class="col-lg-4 col-md-6 col-12 ">
+							<!-- single-schedule -->
+							<div class="single-schedule first">
+								<div class="inner">
+									<div class="icon">
+										<i class="icofont-education"></i>
+									</div>
+									<div class="single-content">
+										<h4>penetration Testing</h4>
+										<p>A security exercise where a cyber-security expert attempts to find vulnerabilities which attackers could take advantage of in a computer system.</p>
+										<a href="{% url 'roadmap-pen_testing' %}" target="_blank">Road map<i class="fa fa-long-arrow-right"></i></a>
+									</div>
 								</div>
 							</div>
 						</div>
-						<!-- End Single Blog -->
-					</div>
-					<div class="col-lg-4 col-md-6 col-12">
-						<!-- Single Blog -->
-						<div class="single-news">
-							<div class="news-head">
-								<img src="{% static 'img/d2.png' %}" alt="#">
-							</div>
-							<div class="news-body">
-								<div class="news-content">
-									<div class="date"><a href="#">Start Course</a></div>
-									<h2>Course Name</a></h2>
-									<p class="text">Course Details</p>
+						<div class="col-lg-4 col-md-6 col-12">
+							<!-- single-schedule -->
+							<div class="single-schedule middle">
+								<div class="inner">
+									<div class="icon">
+										<i class="icofont-education"></i>
+									</div>
+									<div class="single-content">
+										<h4>Red Teaming</h4>
+										<p>Occurs when ethical hackers are authorized by your organization to emulate real attackers (TTPs) against your own systems.</p>
+										<a href="{% url 'roadmap-red_teaming' %}" target="_blank">Road map<i class="fa fa-long-arrow-right"></i></a>
+									</div>
 								</div>
 							</div>
 						</div>
-						<!-- End Single Blog -->
-					</div>
-					<div class="col-lg-4 col-md-6 col-12">
-						<!-- Single Blog -->
-						<div class="single-news">
-							<div class="news-head">
-								<img src="{% static 'img/d3.png' %}" alt="#">
-							</div>
-							<div class="news-body">
-								<div class="news-content">
-									<div class="date"><a href="#">Start Course</a></div>
-									<h2>Course Name</a></h2>
-									<p class="text">Course Details</p>
+						<div class="col-lg-4 col-md-12 col-12">
+							<!-- single-schedule -->
+							<div class="single-schedule last">
+								<div class="inner">
+									<div class="icon">
+										<i class="icofont-education"></i>
+									</div>
+									<div class="single-content">
+										<h4>Blue Teaming</h4>
+										<p>Your organization's cybersecurity team is the primary defense against various threats, including phishing attacks and suspicious activity.</p>
+										<a href="{% url 'roadmap-blue_teaming' %}" target="_blank">Road map<i class="fa fa-long-arrow-right"></i></a>
+									</div>
 								</div>
 							</div>
 						</div>
-						<!-- End Single Blog -->
 					</div>
 				</div>
 			</div>
